# tree-sitter-latex

./: .gitignore  Cargo.toml  README.md
benches/: bench_main.rs
bindings/rust/: lib.rs
