[package]
name = "codebook-tree-sitter-latex"
description = "latex grammar for the tree-sitter parsing library"
version = "0.6.1"
keywords = ["incremental", "parsing", "latex"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/latex-lsp/tree-sitter-latex"
edition = "2018"
license = "MIT"
authors = ["Patrick Förster <patrick.foerster@outlook.de>"]
readme = "README.md"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2.41"

[dev-dependencies]
criterion = "0.5.1"
tree-sitter = "0.25.10"

[[bench]]
name = "bench_main"
path = "benches/bench_main.rs"
harness = false
